Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Documentation]
  - README is now generated by Dist::Zilla::Plugin::UsefulReadme.

  [Bug Fixes]
  - Fixed module prerequisite metadata.

  [Tests]
  - Improved author tests.

  [Toolchain]
  - Improved Dist::Zilla configuration.

v0.6.3    2025-05-18 12:04:50+01:00 Europe/London
  [Documentation]
  - Updated the SEE ALSO section.

  - Added a security policy (SECURITY.md) and how to contribute (CONTRIBUTING.md) document.

  - Updated the copyright year.

  [Tests]
  - Added more author tests.

v0.6.2    2023-05-15 19:01:45+01:00 Europe/London
  [Documentation]
  - Documented support policy for older Perls.

  [Tests]
  - Increased recommended minimum version of Moo for MooX::TypeTiny tests.

v0.6.1    2023-01-12 14:25:42+00:00 Europe/London
  No changes sicne v0.6.0.

v0.6.0    2023-01-10 14:46:04+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  - The deprecated "wo" (write once) attribute type has been removed. Use "once" instead.

  [Documentation]
  - Bumped copyright year.

  - Added Sub::Trigger::Lock to SEE ALSO.

  - Documented support for older Perl versions.

  [Other]
  - Added GitHub Actions to run tests.

v0.5.4    2022-09-04 16:02:53+01:00 Europe/London
  [Other]
  - Sign distribution.

  - Update MANIFEST.SKIP.

v0.5.3    2022-04-03 17:42:59+01:00 Europe/London
  [Bug Fixes]
  - Writers will throw errors, unless it is a write-once attribute.

  - Clearers will throw errors.

  - Fix error check for triggers on value types.

v0.5.2    2022-04-03 16:30:15+01:00 Europe/London
  [Bug Fixes]
  - Wrap coercions, fixes GH#4.

  [Documentation]
  - Bumped copyright year.

  - Fix encoding of links in README.

  [Other]
  - Removed bad rule from MANIFEST.SKIP.

v0.5.1    2021-06-21 16:47:46+01:00 Europe/London
  [Documentation]
  - Bumped copyright year.

  - Updated SEE ALSO.

v0.5.0    2020-12-30 16:54:53+00:00 Europe/London
  [Enhancements]