@@ -80,6 +80,7 @@ Changes for version v0.6.4 (2025-08-03)
 
 - Documentation
     - README is now generated by Dist::Zilla::Plugin::UsefulReadme.
+    - Added SUPPORT section and merged BUGS into it.
 - Bug Fixes
     - Fixed module prerequisite metadata.
 - Tests
@@ -138,7 +139,14 @@ dzil install --install-command="cpan ."
 
 For more information, see the `INSTALL` file included with this distribution.
 
-# BUGS
+# SUPPORT
+
+Only the latest version of this module will be supported.
+
+This module requires Perl v5.14 or later.
+Future releases may only support Perl versions released in the last ten (10) years.
+
+## Reporting Bugs and Submitting Feature Requests
 
 Please report any bugs or feature requests on the bugtracker website
 [https://github.com/robrwo/MooX-Const/issues](https://github.com/robrwo/MooX-Const/issues)
@@ -147,10 +155,15 @@ When submitting a bug or request, please include a test-file or a
 patch to an existing test-file that illustrates the bug or desired
 feature.
 
+If the bug you are reporting has security implications which make it inappropriate to send to a public issue tracker,
+then see `SECURITY.md` for instructions how to report security vulnerabilities.
+
 # SOURCE
 
 The development version is on github at [https://github.com/robrwo/MooX-Const](https://github.com/robrwo/MooX-Const)
 and may be cloned from [git://github.com/robrwo/MooX-Const.git](git://github.com/robrwo/MooX-Const.git)
+
+See `CONTRIBUTING.md` for more information.
 
 # AUTHOR
 
