@@ -4,6 +4,8 @@ Revision history for {{ $dist->name }}:
   [Documentation]
   - README is now generated by Dist::Zilla::Plugin::UsefulReadme.
 
+  - Added SUPPORT section and merged BUGS into it.
+
   [Bug Fixes]
   - Fixed module prerequisite metadata.
 
